--- a/src/sass/components/_extra.sass
+++ b/src/sass/components/_extra.sass
@@ -7,10 +7,14 @@
 		max-width: 1460px
 		+lg
 			max-width: 1200px
+		+sm
+			max-width: 980px
 	&__title
 		text-align: center
 		+md
 			font-size: 18px
+		+sm
+			font-size: 17px
 		+xs
 			font-size: 16px
 	&__inn
