--- a/src/sass/components/_rubric.sass
+++ b/src/sass/components/_rubric.sass
@@ -3,6 +3,8 @@
 		max-width: 1560px
 		font-size: 0
 		text-align: center
+		+sm
+			max-width: 1000px
 	&__col
 		display: inline-block
 		vertical-align: top
@@ -13,7 +15,7 @@
 			width: 16.4%
 		+sm
 			width: 17.5%
-			margin: 0 10px
+			margin: 0 12px
 		+xs
 			width: 19.3%
 			margin: 0 3px
