--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -1,3 +1,12 @@
+// color icons
+=ico($iconName)
+  //width: $iconWidth+ px
+  //height: $iconHeight+ px
+  background-image: url("../img/color-icons/" + $iconName + ".svg")
+  background-repeat: no-repeat
+  background-size: contain
+  background-position: center center
+
 // width
 =r($width)
   @media only screen and (max-width: $width+ "px")
