--- a/src/sass/components/_home-sld.sass
+++ b/src/sass/components/_home-sld.sass
@@ -9,12 +9,12 @@
 		opacity: 1
 	&__item
 		position: relative
-		height: 180px
-		+md
-			height: 140px
+		+sm
+			height: 127px
 		img
 			width: 100%
-			height: 100%
+			+sm
+				height: 100%
 	&__label
 		position: absolute
 		min-height: 27px
@@ -36,7 +36,7 @@
 		+md
 			min-height: 20px
 			line-height: 20px
-			top: 3px
+			top: 2px
 			font-size: 13px
 		+sm
 			min-width: 160px
@@ -45,15 +45,12 @@
 			background: darken(#ECF7FD, 20)
 	&__btn
 		position: absolute
-		top: calc(50% - 15px)
+		top: 50%
+		transform: translateY(-50%)
 		z-index: 1
 		background-color: transparent
 		opacity: 0
 		+trs
-		+md
-			top: calc(50% - 8px)
-		+sm
-			top: calc(50% - 6px)
 	&__btn.slick-disabled &__icon
 		fill: #FDFDFD
 	&__btn.slick-disabled &__icon:hover
@@ -80,11 +77,13 @@
 // custom slick
 .slick
 	&-dots
-		margin: -30px 0 0
+		position: absolute
+		left: 0
+		right: 0
+		bottom: 10%
 		text-align: center
 		+hide-text
 		+md
-			margin-top: -25px
 		li
 			position: relative
 			border-bottom: 1px solid #666666
