--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -7,6 +7,7 @@
 		+md
 			max-width: 1200px
 		+sm
+			max-width: 980px
 			margin: 0 auto 25px
 	&__sect
 		position: relative
@@ -60,7 +61,6 @@
 				background: #F8F9F8
 			.product__sect-count
 				background: #DFE6EB
-			
 				
 		&-title
 			display: flex
@@ -72,6 +72,8 @@
 			+md
 				font-size: 14px
 				max-width: 620px
+			+sm
+				font-size: 13px
 		&-icon
 			display: inline-block
 			vertical-align: middle
@@ -158,7 +160,7 @@
 				+f('oss', 14)
 			+sm
 				padding: 0 18px 0 8px
-				font-size: 11px
+				font-size: 10px
 			+xs
 				margin: 1px
 			&::after, &::before
@@ -310,6 +312,9 @@
 		+md
 			width: 40px
 			height: 40px
+		+sm
+			width: 32px
+			height: 32px
 		+r(1024)
 			opacity: 1
 			transform: scale(1)
@@ -331,7 +336,10 @@
 		font-size: 33px
 		+md
 			font-size: 25px
-			// item here ============>
+		+sm
+			font-size: 20px
+	
+	// item here ============>
 	&__item
 		position: relative
 		padding-bottom: 36px
@@ -345,6 +353,7 @@
 			padding-bottom: 28px
 		+sm
 			flex-basis: 32.5%
+			min-height: 300px
 		.decor__line
 			+lg
 				width: 87%
@@ -442,6 +451,8 @@
 				height: 240px
 			+md
 				height: 214px
+			+sm
+				height: 160px
 			&_thumb
 				height: 118px
 				width: 118px
@@ -493,6 +504,8 @@
 			font-size: 18px
 		+md
 			font-size: 15px
+		+sm
+			font-size: 14px
 		.product__val-icon
 			font-size: 16px
 			fill: #FCBD7E
@@ -500,6 +513,8 @@
 				font-size: 14px
 			+md
 				font-size: 12px
+			+sm
+				font-size: 10px
 	&__buy-opt:hover
 		color: #EF7C1B
 	&__buy-opt:hover .product__val-icon
@@ -525,22 +540,23 @@
 			fill:	 #E63833
 			+md
 				font-size: 12px
+			+sm
+				font-size: 10px
 		&::after
 			position: absolute
-			right: -2px
-			top: -2px
-			z-index: 1
+			top: 0
+			right: 0
 			content: ''
-			+s('btn_cart')
-			transform: scale(.9)
+			width: 38px
+			height: 36px
+			+ico('cart_add')
 			+md
-				top: -6px
-				right: -6px
-				transform: scale(0.7)
+				width: 30px
+				height: 28px
 		&:hover::after
-			+s('btn_cart-hvr')
+			+ico('cart_add-hvr')
 		&:active::after
-			+s('btn_cart-act')
+			+ico('cart_add-act')
 	&__price-current
 		display: inline-block
 		vertical-align: middle
@@ -551,6 +567,8 @@
 			font-size: 19px
 		+md
 			font-size: 15px
+		+sm
+			font-size: 14px
 	&__suggest
 		position: relative
 		width: (590/1530 * 100%)
@@ -583,9 +601,18 @@
 		&-text
 			margin-bottom: 40px
 		&-title
-			padding-left: 35px
+			padding: 0
 			align-self: flex-start
 			width: 100%
+			text-indent: 35px
+			+md
+				font-size: 17px
+			+sm
+				text-indent: 0
+				padding-left: 25px
+				font-size: 15px
+			+xs
+				font-size: 16px
 		&-descr
 			margin: 15px 0
 			text-indent: 26px
@@ -596,6 +623,7 @@
 			+md
 				font-size: 16px
 			+sm
+				margin: 5px 0
 				font-size: 14px
 			
 			&_topm
@@ -604,6 +632,8 @@
 			margin: -15px 0 15px
 			+md
 				margin: 0 0 5px
+			+xs
+				margin: 0 0 15px
 		&-links
 			+clr
 			+md
@@ -638,7 +668,7 @@
 		&-col
 			float: left
 			width: calc(50% - 5px)
-			padding: 0 5px 0 20px
+			padding: 0 5px 0 18px
 			margin-left: 5px
 			border-left: 1px solid #EBEBEB
 			+md
