--- a/src/sass/components/_request.sass
+++ b/src/sass/components/_request.sass
@@ -9,6 +9,8 @@
 		padding: 20px 0 10px
 	&__container
 		max-width: 1024px
+		+sm
+			max-width: 980px
 	&__title
 		margin-bottom: 40px
 		text-align: center
@@ -49,20 +51,20 @@
 		overflow: hidden
 		&::after
 			position: absolute
+			top: -1px
 			left: -1px
-			top: -2px
-			z-index: 1
+			width: 50px
+			height: 38px
 			content: ''
 			+md
-				left: -6px
-				top: -4px
-				transform: scale(.8)
+				width: 42px
+				height: 32px
 		&_name::after
-			+s('user_form')
+			+ico('user-form')
 		&_tel::after
-			+s('phone_form')
+			+ico('phone-form')
 		&_email::after
-			+s('mail_form')
+			+ico('message-form')
 	&__input
 		display: inline-block
 		vertical-align: middle
@@ -87,16 +89,17 @@
 		+md
 			padding-left: 40px
 		&::after
-			content: ''
 			position: absolute
-			z-index: 1
-			top: -3px
-			left: -3px
-			+s('dots_form')
+			top: -1px
+			left: -1px
+			width: 52px
+			height: 37px
+			+ico('dots-form')
+			content: ''
 			+md
-				top: -6px
-				left: -7px
-				transform: scale(.75)
+				left: -2px
+				width: 42px
+				height: 32px
 	&__message
 		display: block
 		padding: 9px 15px 15px 16px
@@ -199,15 +202,17 @@
 		&::after
 			content: ''
 			display: block
+			width: 56px
+			height: 52px
 			margin: 3px auto 0
-			+sr('file')
-			transform: scale(.9)
+			+ico('file')
 			+md
-				transform: scale(.8)
+				width: 44px
+				height: 42px
 		&:hover::after
-			+sr('file-hvr')
+			+ico('file-hvr')
 		&:active::after
-			+sr('file-act')
+			+ico('file-act')
 		&:hover
 			background: #5EAFDA
 			border-bottom-color: #FFFF00
