--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -23,7 +23,7 @@ block content
 				include components/_rubric-side
 				+e.main
 					+b.SECTION.cups
-						+b.title-md КРУЖКИ ЛЮБОЙ ТЕМАТИКИ! ПЕЧАТЬ ПРИ ВАС ЗА 15 МИНУТ, ОПТОВОЕ И ШТУЧНОЕ ПРОИЗВОДСТВО. ТАКЖЕ МЫ СОБРАЛИ ЛУЧШИЕ ДИЗАЙНЫ КРУЖЕК - САМЫЕ ВОСТРЕБОВАННЫЕ И СОВРЕМЕННЫЕ.
+						+b.title-md.sect-title КРУЖКИ ЛЮБОЙ ТЕМАТИКИ! ПЕЧАТЬ ПРИ ВАС ЗА 15 МИНУТ, ОПТОВОЕ И ШТУЧНОЕ ПРОИЗВОДСТВО. ТАКЖЕ МЫ СОБРАЛИ ЛУЧШИЕ ДИЗАЙНЫ КРУЖЕК - САМЫЕ ВОСТРЕБОВАННЫЕ И СОВРЕМЕННЫЕ.
 						+b.P.sect-descr Хорошо что Вы вышли на эту страничку!  Мы с большим удовольствием проинформируем Вас по всем видам кружек и их упаковке, разным методам изготовления, 3Д визуализации перед печатью.  В части производства сувениров на посуде у нас большие наработки и опыт.  Сейчас технологии производства заготовок для печати на посуде вышли на высокий уровень, наше предприятие полностью удовлетворит даже самый изысканный спрос на подобные виды услуг, рассмотрите предложения!
 						
 						+b.product-types._cups
