--- a/src/sass/components/_home-sld.sass
+++ b/src/sass/components/_home-sld.sass
@@ -9,11 +9,11 @@
 		opacity: 1
 	&__item
 		position: relative
-		+sm
-			height: 127px
+		//+sm
+			//height: 127px
 		img
 			width: 100%
-			+sm
+			//+sm
 				height: 100%
 	&__label
 		position: absolute
