--- a/src/sass/components/_rubric.sass
+++ b/src/sass/components/_rubric.sass
@@ -128,7 +128,7 @@
 		border-bottom: 1px solid darken(#f5f8fd, 10)
 		font-size: 18px
 		+md
-			font-size: 15px
+			font-size: 16px
 		+sm
 			padding: 7px 10px
 			font-size: 14px
@@ -140,6 +140,8 @@
 	&__mini
 		margin: 5px 3px 5px -12px
 		color: #333
+		+md
+			font-size: 16px
 		&_margin
 			margin-top: 20px
 	&__mini.is-active &__mini-icon
@@ -230,6 +232,8 @@
 			display: block
 		.rubric__list-link
 			padding: 16px 30px 16px 25px
+			+md
+				font-size: 16px
 			&:hover
 				background: #F5F5F5
 		.rubric__list-link_color
