--- a/src/sass/lib/_stepper.sass
+++ b/src/sass/lib/_stepper.sass
@@ -25,6 +25,9 @@
 		+vertical
 		text-align: center
 		transition: .15s
+		+md
+			width: 22px
+			height: 30px
 		&:hover
 			background: #9ECDFF
 			border-bottom-color: #DFDFDF
@@ -45,6 +48,8 @@
 		vertical-align: middle
 		font-size: 13px
 		pointer-events: none
+		+md
+			font-size: 10px
 	&.disabled
 		.stepper-input
 			background: #fff
