--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -491,6 +491,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-1_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-1.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 									+e.slider-label._right Обычное фото
 										+e.BR
 										| на кружку
@@ -498,6 +500,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-2_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-2.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 									+e.slider-label Портрет по фото.
 										+e.BR
 										| Стиль «Фэнтезийная акварель»
@@ -505,6 +509,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-3_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-3.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета
 											+e.BR
 											| «Двойная экспозиция»
@@ -512,6 +518,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-4_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-4.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Обычное фото
 											+e.BR
 											| на кружке
@@ -519,6 +527,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-5_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-5.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Портрет по фото в стиле
 											+e.BR
 											| «Молодёжный Поп-Арт»
@@ -526,21 +536,29 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-6_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-6.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета «Поп-Арт»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-7_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-7.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета «Поп-Арт»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-8_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-8.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета «Поп-Арт»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-9_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-9.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета
 											+e.BR
 											| «ТИПОГРАФИКА»
@@ -548,11 +566,15 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-10_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-10.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета «Вектор-Арт»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-11_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-11.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета «КОМИКС,
 											+e.BR
 											| ВЕКТОР-АРТ»
@@ -560,6 +582,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-12_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-12.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета
 											+e.BR
 											| «ПОЛИГОНАЛЬНЫ Й»
@@ -567,6 +591,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-13_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-13.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Стиль портрета
 											+e.BR
 											| «ПОЛИГОНАЛЬНЫ Й»
@@ -574,6 +600,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-14_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-14.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Портрет по фото
 											+e.BR
 											| на кружке «ВЕКТОР-АРТ»
@@ -581,6 +609,8 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-15_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-15.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Портрет по фото
 											+e.BR
 											| на кружке «КАРАНДАШОМ»
@@ -588,6 +618,8 @@ block content
 								+e.slider-item.zoom
 										+e.A.slider-item-pic.zoom__element(href='img/content/teaser-16_lg.jpg' data-fancybox='teaser-slider')
 											+e.DIV.slider-img(style='background-image: url(img/content/teaser-16.jpg)')
+											+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 											+e.slider-label Портрет в стиле «ВЕКТОР-АРТ
 												+e.BR
 												| плюс ПОП-АРТ»
@@ -595,11 +627,17 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-17_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-17.jpg)')
-										+e.slider-label Портрет по фото на кружке «АКВАРЕЛЬ-АРТ»
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
+										+e.slider-label Портрет по фото
+											+e.BR
+											| на кружке «АКВАРЕЛЬ-АРТ»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-18_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-18.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Обычное фото
 											+e.BR
 											| на кружке
@@ -607,11 +645,15 @@ block content
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-19_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-19.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Портрет в стиле «РЕТРО»
 
 								+e.slider-item.zoom
 									+e.A.slider-item-pic.zoom__element(href='img/content/teaser-20_lg.jpg' data-fancybox='teaser-slider')
 										+e.DIV.slider-img(style='background-image: url(img/content/teaser-20.jpg)')
+										+b.BUTTON.zoom__btn._sld(type='button')
+												+icon('icon-loupe','zoom__btn-icon')
 										+e.slider-label Портрет по фото
 											+e.BR
 											| на кружке «ВЕКТОР-АРТ»
@@ -770,12 +812,13 @@ block content
 								+e.pic._md
 									+e.pic-img(style='background-image: url(img/content/overview-12.jpg)')
 								+e.label._type-2
-									+e.DIV Выставка
+									+e.DIV Вы ставка
 									+e.DIV багетной
 									+e.DIV мастерской
 
-							+e.title._last
-								+e.I ЖДЁМ ВАШИХ ЗАКАЗОВ!
+							+e.text._last
+								+e.title
+									+e.I ЖДЁМ ВАШИХ ЗАКАЗОВ!
 
 
 	- var benefitsClass = '_default'
