--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -454,11 +454,14 @@
 			+sm
 				height: 160px
 			&_thumb
-				height: 118px
+				height: 118px!important
 				width: 118px
 				cursor: pointer
 				&:not(:last-child)
 					margin-right: 12px
+				+md
+					height: 100px
+					width: 84px
 				img
 					width: 100%
 					height: 100%
@@ -867,7 +870,7 @@
 				width: 52%
 			&:nth-child(2)
 				width: 48%
-				padding-left: percentage(19 / 1224)
+				padding-left: 1.3%
 	&__descr-title
 		padding: 4px 15px
 		margin-bottom: 15px
@@ -876,9 +879,15 @@
 		text-transform: uppercase
 		color: #00306B
 		background-color: #F4F8FD
+		+md
+			font-size: 19px
 	&__descr-item
 		padding: 0 20px 0 15px
 		margin-bottom: 20px
+		+md
+			margin-bottom: 10px
+			padding: 0 10px
+			font-size: 16px
 		&:last-child
 			margin-bottom: 0
 	&__buy-in
@@ -888,11 +897,15 @@
 	&__amount
 		padding: 0 0 0 25px
 		background: #EEF5FC
+		+md
+			padding: 0 0 0 10px
 	&__amount-text
 		display: inline-block
 		vertical-align: middle
 		font-size: 24px
 		color: #00306B
+		+md
+			font-size: 19px
 	&__amount-count
 		display: inline-block
 		vertical-align: middle
@@ -910,6 +923,9 @@
 		height: 29px
 		line-height: 29px
 		text-align: right
+		+md
+			width: 43px
+			font-size: 16px
 	&__price
 		min-width: 152px
 		padding: 15px 10px
@@ -919,21 +935,30 @@
 		border-top-left-radius: 10px
 		background: #F4F8FD url(../img/bg/price-bg.svg) no-repeat 0 0
 		background-size: 100% 195%
+		+md
+			min-width: 120px
+			padding: 10px
+			font-size: 24px
 		.icon-ruble
 			display: inline-block
 			margin-left: 5px
 			fill: #00306B
 			font-size: 21px
+			+md
+				font-size: 17px
 	&__link-sale
 		display: inline-block
 		margin: 5px 0 0 25px
 		+f('psb', 23)
+		+md
+			margin: 5px 0 0 10px
 		span
 			border-bottom: 3px dashed #FCBD7E
 	&__btn-cart
 		margin: 30px auto 0
 		display: block
-		
+		+md
+			margin: 25px auto 0
 	&__look
 		margin-top: 15px
 	&__look-view
@@ -946,6 +971,8 @@
 	&__look-thumbs
 		display: none
 		margin: 25px 0 35px
+		+md
+			margin: 20px 0 25px
 		&.slick-initialized
 			display: block
 	&__props
@@ -954,9 +981,15 @@
 		float: left
 		&:nth-child(1)
 			width: 64%
+			+md
+				width: 65%
 		&:nth-child(2)
 			width: 36%
 			padding-left: 1%
+			+md
+				width: 35%
+				padding-left: .6%
+				
 	&__props-row
 		display: flex
 		justify-content: space-between
@@ -968,6 +1001,9 @@
 		padding: 0 10px
 		color: #00306B
 		background: #F5F5F5
+		+md
+			padding: 0 5px
+			font-size: 14px
 		&:hover
 			background: darken(#F5F5F5, 5)
 	&__hashtags-link + &__hashtags-link
@@ -981,6 +1017,10 @@
 		padding: 6px 65px 5px 40px
 		background: #EEF5FC
 		border-bottom: 1px solid #E1EFF6
+		+md
+			min-height: 48px
+			padding: 2px 50px 0 25px
+			font-size: 15px
 		&:hover
 			background: #61CDFF
 			border-bottom-color: #FFC486
@@ -997,6 +1037,9 @@
 			height: 55px
 			right: 0
 			top: 0
+			+md
+				width: 46px
+				height: 48px
 			+ico('edit')
 		&:hover::after
 			+ico('edit-hvr')
@@ -1012,17 +1055,24 @@
 		top: 10px
 		fill: #DFE9F5
 		font-size: 13px
+		+md
+			top: 10px
+			left: 5px
+			font-size: 9px
 	&__wish-btn
 		margin-bottom: 20px
 	&__wish-add-btn
 		position: relative
 		width: 58px
 		height: 55px
-		padding: 1px 0
 		margin-right: 7px
 		background: #EEF5FC
 		border-bottom: 1px solid #e1eff6
 		overflow: hidden
+		+md
+			width: 55px
+			height: 48px
+			margin-right: 3px
 		&:hover
 			border-bottom-color: #ffc486
 			background: #61cdff
@@ -1037,6 +1087,9 @@
 			width: 55px
 			height: 55px
 			+ico('fav')
+			+md
+				width: 46px
+				height: 49px
 		&:hover::after
 			+ico('fav-hvr')
 		&:active::after
