--- a/src/templates/components/_breadcrumbs.jade
+++ b/src/templates/components/_breadcrumbs.jade
@@ -1,6 +1,14 @@
-//if breadCrumbs ? breadCrumbs : breadCrumbs = []
-//
-//+b.breadcrumbs(class= breadCrumbs ? breadCrumbs : '')
-//	+e.UL.list
-//		mixin breadcrumbsItem
-//			+e.A.link(href='#!')
+if breadCrumbs ? breadCrumbs : breadCrumbs = []
+
++b.breadcrumbs(class= breadCrumbs ? breadCrumbs : '')
+	+e.UL.list
+		+e.LI.item
+			+e.A.link(href='#!')
+				+icon('icon-house', 'breadcrumbs__icon')
+				+e.SPAN Главная
+		mixin breadcrumbsItem(item)
+			+e.LI.item(class= item.active)
+				+e.A.link(href='#!')
+					+e.SPAN= item.text
+		each item in breadCrumbsList
+			+breadcrumbsItem(item)
