--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -26,10 +26,10 @@
       +b.login._header
         +e.BUTTON(type='button').btn.js-login-btn
           +icon('icon-user', 'login__icon')
-          +e.SPAN Войти
+          +e.SPAN.text Войти
         +e.A.btn(href="#!")
           +icon('icon-pencil', 'login__icon')
-          +e.SPAN Регистрация
+          +e.SPAN.text Регистрация
         +e.popup
           +icon('icon-user','login__popup-icon')
           +e.popup-text Вход:
@@ -38,7 +38,8 @@
               +e.INPUT.popup-input(type='name' placeholder='Имя / Организация')
             +e.popup-field
               +e.INPUT.popup-input(type='password' placeholder='Пароль')
-            +e.BUTTON(type='submit').popup-btn Войти
+            +e.BUTTON(type='submit').popup-btn
+              +e.SPAN.popup-btn-text Войти
 
   +e.mid
     +e.container.container
