--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -161,6 +161,9 @@ h1, h2, h3, h4, h5, h6
 	+md
 		padding: 15px 80px 15px 30px
 		font-size: 17px
+	+sm
+		padding: 11px 60px 11px 26px
+		font-size: 15px
 	&::after
 		position: absolute
 		top: -1px
@@ -172,6 +175,9 @@ h1, h2, h3, h4, h5, h6
 		+md
 			width: 54px
 			height: 54px
+		+sm
+			width: 43px
+			height: 43px
 	&:hover
 		background: #01B6F8
 		border-bottom-color: #FFBE77
