--- a/src/templates/category-page.jade
+++ b/src/templates/category-page.jade
@@ -34,21 +34,21 @@ block content
 											+e.look-pic
 												+e.IMG(src='img/content/look-img-1.jpg')
 										+e.look-thumbs.js-look-thumbs
-											+e.item-pic._thumb.decor._xs
+											+e.look-thumbs-pic.decor._xs
 												+e.IMG(src='img/content/look-1.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
+												+b.decor__line
+											+e.look-thumbs-pic.decor._xs
 												+e.IMG(src='img/content/look-2.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
+												+b.decor__line
+											+e.look-thumbs-pic.decor._xs
 												+e.IMG(src='img/content/look-3.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
+												+b.decor__line
+											+e.look-thumbs-pic.decor._xs
 												+e.IMG(src='img/content/look-4.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
+												+b.decor__line
+											+e.look-thumbs-pic.decor._xs
 												+e.IMG(src='img/content/look-5.jpg')
-												.decor__line
+												+b.decor__line
 									+e.props
 										+e.props-col
 											+e.props-row
