--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -24,6 +24,10 @@
 	color: #FCBD7E
 	font-size: 20px
 	+trs
+	+md
+		font-size: 18px
+	+sm
+		font-size: 16px
 	span
 		border-bottom: 2px dashed #FCBD7E
 	&:hover span
@@ -292,8 +296,14 @@
 			.pagination__list-link
 				padding: 0
 				line-height: 39px
+				+md
+					line-height: 34px
+				+sm
+					line-height: 29px
 		&_dots
 			margin: 0 10px
+			+md
+				margin: 0 5px
 	&__list-item.is-active &__list-link
 			background: #FFEBAB
 	&__list-link
@@ -305,6 +315,16 @@
 		border-radius: 5px
 		height: 39px
 		min-width: 38px
+		+md
+			padding: 6px 8px
+			height: 34px
+			min-width: 34px
+			font-size: 16px
+		+sm
+			padding: 4px
+			height: 29px
+			min-width: 31px
+			font-size: 14px
 		&:hover
 			background: #EDEDED
 		&:active
@@ -316,14 +336,22 @@
 		vertical-align: middle
 		fill: #EDEDED
 		font-size: 27px
-			
+		+md
+			font-size: 21px
+		+sm
+			font-size: 18px
+	
 	&_product
 		margin: 20px 0 45px
-		
+		+md
+			margin: 10px 0 30px
+		+sm
+			margin: 10px 0 15px
 	&_watched
 		margin: 30px 0
 		background: none
-		
+		+md
+			margin: 15px 0
 	&_news
 		margin-top: 25px
 
@@ -355,6 +383,10 @@
 		background: #F7FAFF
 		text-align: center
 		transition: background .15s ease
+		+md
+			font-size: 15px
+		+sm
+			font-size: 14px
 		&:hover
 			background: #E5F0FC
 		&:active
@@ -373,6 +405,8 @@
 		margin-bottom: 3px
 		color: #1C487A
 		+md
+			font-size: 14px
+		+sm
 			font-size: 15px
 	&__in
 		display: flex
