--- a/src/sass/components/_rubric.sass
+++ b/src/sass/components/_rubric.sass
@@ -143,7 +143,7 @@
 		+md
 			font-size: 16px
 		+sm
-			margin: 8px -2px 8px -2px
+			margin: 8px -5px 8px -5px
 			font-size: 14px
 		&_margin
 			margin-top: 20px
@@ -158,7 +158,7 @@
 		background: #F5F5F5
 		cursor: pointer
 		+sm
-			padding: 2px 20px 2px 12px
+			padding: 2px 20px 2px 5px
 		&:hover
 			background: #F5F7FF
 		&:active
@@ -253,7 +253,7 @@
 			+md
 				font-size: 16px
 			+sm
-				padding: 16px 24px 16px 25px
+				padding: 10px 24px 10px 25px
 				font-size: 14px
 			&:hover
 				background: #F5F5F5
@@ -270,14 +270,14 @@
 			+md
 				padding: 13px 3px 13px 18px
 			+sm
-				padding: 8px 10px 8px 10px
+				padding: 8px 7px 8px 7px
 		.rubric__sub-item
 			line-height: 1.1
 			margin: 0 0 5px
 		.rubric__sub-item_best
 			margin: 15px 0 20px
-			+sm
-				margin: 8px 0 14px
+			+md
+				margin: 8px 0 15px
 		.rubric__sub-item_examples
 			margin: 20px 0 0
 			+sm
